--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -22,9 +22,12 @@ spring:
             test-while-idle: true
             time-between-eviction-runs-millis: 60000
             #url:  jdbc:mysql://115.28.187.78:3306/sipsd-simple?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-            url:  jdbc:mysql://115.28.187.78:3306/flowable?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+#            url:  jdbc:mysql://115.28.187.78:3306/flowable?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+#            username: root
+#            password: Admin@1234
+            url: jdbc:mysql://cdb-eqybbrkx.gz.tencentcdb.com:10150/flowable_dev?characterEncoding=UTF-8&useUnicode=true&useSSL=false
             username: root
-            password: Admin@1234
+            password: gao1210886745
             driver-class-name: com.mysql.jdbc.Driver
             validation-query: SELECT 1
             show-sql: true
