--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -13,11 +13,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "vue": "^2.6.11",
     "ant-design-vue": "^1.6.3",
+    "axios": "^0.18.0",
+    "bpmn-js": "^8.2.2",
+    "vue": "^2.6.11",
+    "vue-bpmn": "^0.3.0",
     "vue-ls": "^3.2.0",
-    "vuex": "^3.5.1",
-    "axios": "^0.18.0"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
