--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bpmn-theme-blue",
+  "name": "vue-bpmn-viewer",
   "version": "1.0.1",
   "description": "bpmn流程图预览组件",
   "main": "dist/index.js",
@@ -17,11 +17,13 @@
   "license": "MIT",
   "dependencies": {
     "bpmn-js": "^8.2.2",
+    "rollup-plugin-commonjs": "^10.1.0",
     "tiny-svg": "^2.2.2"
   },
   "devDependencies": {
-    "rollup": "^2.43.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-css-only": "^3.1.0"
+    "rollup": "^2.44.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "5.1.9",
+    "vue-template-compiler": "^2.6.12"
   }
 }
