--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -17,13 +17,16 @@
   "license": "MIT",
   "dependencies": {
     "bpmn-js": "^8.2.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "tiny-svg": "^2.2.2"
+    "tiny-svg": "^2.2.2",
+    "axios": "^0.18.0",
+    "vue": "^2.6.11",
+    "vue-bpmn": "^0.3.1"
   },
   "devDependencies": {
     "rollup": "^2.44.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "5.1.9",
+    "rollup-plugin-commonjs": "^10.1.0",
     "vue-template-compiler": "^2.6.12"
   }
 }
