--- a/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
+++ b/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bpmn-theme-blue",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "bpmn-js蓝色主题",
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "lerna clean"
   },
   "module": "dist/index.esm.js",
   "keywords": [
@@ -20,6 +20,7 @@
     "tiny-svg": "^2.2.2"
   },
   "devDependencies": {
+    "lerna": "^4.0.0",
     "rollup": "^2.43.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^3.1.0"
