--- a/sipsd-flowable-editor/src/packages/vue-bpmn-controls/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-controls/package.json
@@ -4,7 +4,7 @@
   "description": "vue-bpmn控件库",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
   "module": "index.js",
   "keywords": [
@@ -15,5 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "ant-design-vue": "^1.6.3"
+  },
+  "devDependencies": {
+    "rollup": "^2.44.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "5.1.9",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "vue-template-compiler": "^2.6.12",
+    "rollup-plugin-css-only": "^3.1.0"
   }
 }
