--- a/sipsd-flowable-editor/src/packages/vue-bpmn-controls/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-controls/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-bpmn-controls",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "vue-bpmn控件库",
   "main": "dist/index.js",
   "scripts": {
@@ -17,11 +17,16 @@
     "ant-design-vue": "^1.6.3"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
+    "postcss": "^8.2.9",
+    "postcss-url": "^10.1.3",
     "rollup": "^2.44.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "5.1.9",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "vue-template-compiler": "^2.6.12",
-    "rollup-plugin-css-only": "^3.1.0"
+    "vue-template-compiler": "^2.6.12"
   }
 }
