--- a/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
+++ b/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bpmn-theme-blue",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "bpmn-js蓝色主题",
   "main": "dist/index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "devDependencies": {
     "rollup": "^2.43.1",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-css-only": "^3.1.0"
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-postcss": "^4.0.0"
   }
 }
