--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-bpmn-viewer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "bpmn流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
@@ -25,8 +25,8 @@
   "devDependencies": {
     "rollup": "^2.44.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-url": "^3.0.1",
     "rollup-plugin-vue": "5.1.9",
     "vue-template-compiler": "^2.6.12"
   }
