--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-bpmn-viewer",
-  "version": "1.0.2",
-  "description": "bpmn流程图预览组件",
+  "version": "1.0.3",
+  "description": "bpmn2.0 流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
