--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-bpmn-viewer",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "bpmn2.0 流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "bpmn-js": "^8.2.2",
     "tiny-svg": "^2.2.2",
     "vue": "^2.6.11",
-    "vue-bpmn": "^0.3.1"
+    "vue-bpmn": "^0.3.1",
+    "vue-bpmn-controls": "^1.0.11"
   },
   "devDependencies": {
     "rollup": "^2.44.0",
