--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -18,10 +18,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
+    "bpmn-theme-blue": "^1.0.7",
     "tiny-svg": "^2.2.2",
     "vue": "^2.6.11",
     "vue-bpmn": "^0.3.1",
-    "vue-bpmn-controls": "^1.0.12"
+    "vue-bpmn-controls": "^1.0.13"
   },
   "devDependencies": {
     "rollup": "^2.44.0",
