【提交人】高强 【提交内容】springboot整合liquibase管理附加表和数据库版本管理

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application.yml
@@ -68,8 +68,11 @@ spring:
     time-zone: GMT+8
   jmx:
     default-domain: ${spring.application.name}
+  main:
+    allow-bean-definition-overriding: true
   liquibase:
     enabled: false
+    change-log: classpath:/db/changelog/db.changelog-master.xml
   mvc:
     favicon:
       enabled: false
