【提交内容】1.将附加表加入flowable liquibase机制  2.兼容原有第一版工作流的接口来适应以前项目中用到的旧的工作流接口 【提交人】 高强

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application.yml
@@ -71,8 +71,8 @@ spring:
   main:
     allow-bean-definition-overriding: true
   liquibase:
-    enabled: false
-    change-log: classpath:/db/changelog/db.changelog-master.xml
+    enabled: true
+    change-log: classpath:/META-INF/liquibase/flowable-modeler-sipsd-db-changelog.xml
   mvc:
     favicon:
       enabled: false
