--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -13,15 +13,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@dpark/vue-bpmn-viewer": "^1.0.10",
     "ant-design-vue": "^1.6.3",
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
     "bpmn-theme-blue": "^1.0.7",
     "tiny-svg": "^2.2.2",
     "vue": "^2.6.11",
-    "vue-bpmn": "^0.3.1",
-    "vue-bpmn-controls": "^1.0.13",
-    "vue-bpmn-viewer": "^1.0.10",
     "vue-ls": "^3.2.0",
     "vuex": "^3.5.1"
   },
