--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/vue-bpmn-viewer",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "bpmn2.0 流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
@@ -15,16 +15,18 @@
   ],
   "private": false,
   "author": "框架技术研发部",
-  "contributors": ["isaac"],
+  "contributors": [
+    "isaac"
+  ],
   "license": "MIT",
   "dependencies": {
+    "@dpark/vue-bpmn": "^0.3.1",
+    "@dpark/vue-bpmn-controls": "^1.0.14",
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
     "bpmn-theme-blue": "^1.0.7",
     "tiny-svg": "^2.2.2",
-    "vue": "^2.6.11",
-    "@dpark/vue-bpmn": "^0.3.1",
-    "@dpark/vue-bpmn-controls": "^1.0.13"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "rollup": "^2.44.0",
