【提交内容】 更新审批日期的督办 【提交人】高强

--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -16,7 +16,7 @@
 	</parent>
 
 	<modules>
-		<!--<module>sipsd-flowable-api</module>-->
+		<module>sipsd-flowable-api</module>
 		<module>sipsd-flowable-core</module>
 		<module>sipsd-flowable-manager</module>
 	</modules>
