--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/vue-bpmn-viewer",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "description": "bpmn2.0 流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-url": "^3.0.1",
     "rollup-plugin-vue": "5.1.9",
+    "rollup-plugin-postcss": "^4.0.0",
     "vue-template-compiler": "^2.6.12"
   }
 }
