【提交内容】 修改一些内容 【提交人】高强

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -25,9 +25,9 @@ spring:
 #            url:  jdbc:mysql://115.28.187.78:3306/flowable?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 #            username: root
 #            password: Admin@1234
-            url: jdbc:mysql://cdb-eqybbrkx.gz.tencentcdb.com:10150/flowable_v4_temp?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+            url: jdbc:mysql://127.0.0.1:3306/flowable_v4_temp?characterEncoding=UTF-8&useUnicode=true&useSSL=false
             username: root
-            password: gao1210886745
+            password: 123@abcd
             driver-class-name: com.mysql.jdbc.Driver
             validation-query: SELECT 1
             show-sql: true
