--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -25,7 +25,7 @@ spring:
 #            url:  jdbc:mysql://115.28.187.78:3306/flowable?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 #            username: root
 #            password: Admin@1234
-            url: jdbc:mysql://127.0.0.1:3306/flowable_test?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+            url: jdbc:mysql://127.0.0.1:3306/flowable_v4_temp?characterEncoding=UTF-8&useUnicode=true&useSSL=false
             username: root
             password: 123@abcd
             driver-class-name: com.mysql.jdbc.Driver
