--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -25,7 +25,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<mysql.version>5.1.39</mysql.version>
+		<!-- 	TODO 5.7选择5.1.39版本  推荐使用mysql5.7版本 -->
+		<mysql.version>8.0.11</mysql.version>
 		<druid.springboot.version>1.1.10</druid.springboot.version>
 		<!-- <mybatis-spring-boot>1.3.1</mybatis-spring-boot> -->
 		<flowable.version>6.4.2</flowable.version>
