--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -25,11 +25,11 @@ spring:
 #            url:  jdbc:mysql://115.28.187.78:3306/flowable?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 #            username: root
 #            password: Admin@1234
-            url: jdbc:mysql://106.14.242.98:3306/flow_modeler_dev?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=GMT
+            url: jdbc:mysql://127.0.0.1:3306/flowable_v4_temp?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=GMT
             username: root
             password: 123@abcd
-            # TODO 5.7选择 com.mysql.jdbc.Driver   推荐使用mysql5.7版本
-            driver-class-name: com.mysql.cj.jdbc.Driver
+            # TODO 8.x选择 com.mysql.cj.jdbc.Driver   推荐使用mysql5.7版本
+            driver-class-name: com.mysql.jdbc.Driver
             validation-query: SELECT 1
             show-sql: true
             filter:
