--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -25,7 +25,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<!-- 	TODO 8.x选择8.0.11版本  推荐使用mysql5.7版本 -->
+		<!-- 	FIXME 8.x选择8.0.11版本  推荐使用mysql5.7版本 -->
 		<mysql.version>5.1.39</mysql.version>
 		<druid.springboot.version>1.1.10</druid.springboot.version>
 		<!-- <mybatis-spring-boot>1.3.1</mybatis-spring-boot> -->
