--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -13,12 +13,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@dpark/vue-bpmn-viewer": "^1.0.26",
+    "@dpark/vue-bpmn-viewer": "^1.0.30",
     "ant-design-vue": "^1.6.3",
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
     "bpmn-theme-blue": "^1.0.7",
     "tiny-svg": "^2.2.2",
+    "url-join": "^4.0.1",
     "vue": "^2.6.11",
     "vue-ls": "^3.2.0",
     "vuex": "^3.5.1"
