【提交内容】 修改任务监听器和加入证书(证书暂时已注释掉) 【提交人】 高强

--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -46,6 +46,13 @@
 			<artifactId>json-path</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>com.sipsd</groupId>-->
+<!--			<artifactId>dpark-license-spring-boot-starter</artifactId>-->
+<!--			<version>1.0.0</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<dependencyManagement>
