--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -48,3 +48,10 @@ info:
 security : 
     basic :
         enabled:false
+#License相关配置
+license:
+    subject: license_demo
+    publicAlias: publicCert
+    storePass: public_passwordQAZ2wsx3edc
+    licensePath: /Users/mac/Documents/Apache/license_demo/license.lic
+    public-keys-store-path: /Users/mac/Documents/Apache/license_demo/publicCerts.keystore
