--- a/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
+++ b/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/bpmn-theme-blue",
-  "version": "1.0.10",
+  "version": "1.0.13",
   "description": "bpmn-js蓝色主题",
   "main": "dist/index.js",
   "scripts": {
@@ -14,7 +14,9 @@
   ],
   "private": false,
   "author": "框架技术研发部",
-  "contributors": ["isaac"],
+  "contributors": [
+    "isaac"
+  ],
   "license": "MIT",
   "dependencies": {
     "bpmn-js": "^8.2.2",
