【提交内容】 更新flowable作为rest任务时需要加入flowable-http的最贱 【提交人】 高强

--- a/sipsd-flowable-parent/sipsd-flowable-manager/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/pom.xml
@@ -124,6 +124,13 @@
 			<version>${flowable.version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.flowable/flowable-http -->
+		<dependency>
+			<groupId>org.flowable</groupId>
+			<artifactId>flowable-http</artifactId>
+			<version>6.4.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy</artifactId>
