--- a/sipsd-flowable-parent/sipsd-flowable-manager/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/pom.xml
@@ -128,7 +128,7 @@
 		<dependency>
 			<groupId>org.flowable</groupId>
 			<artifactId>flowable-http</artifactId>
-			<version>6.4.1</version>
+			<version>${flowable.version}</version>
 		</dependency>
 
 		<dependency>
