--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -15,7 +15,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@dpark/vue-bpmn-viewer": "^1.0.38",
+    "@dpark/logfv-web-vue": "^1.0.18",
+    "@dpark/vue-bpmn-viewer": "^1.0.39",
     "ant-design-vue": "^1.6.3",
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
