--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@dpark/logfv-web-vue": "^1.0.18",
+    "@dpark/s2-utils": "^1.0.26",
     "@dpark/vue-bpmn-viewer": "^1.0.39",
     "ant-design-vue": "^1.6.3",
     "axios": "^0.18.0",
