--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/vue-bpmn-viewer",
-  "version": "1.0.39",
+  "version": "1.0.40",
   "description": "bpmn2.0 流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
@@ -20,7 +20,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@dpark/bpmn-theme-blue": "^1.0.14",
+    "@dpark/bpmn-theme-blue": "^1.0.15",
+    "@dpark/logfv-web-vue": "^1.0.18",
     "@dpark/vue-bpmn": "^0.3.3",
     "@dpark/vue-bpmn-controls": "^1.0.23",
     "axios": "^0.18.0",
