--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/vue-bpmn-viewer",
-  "version": "1.0.40",
+  "version": "1.0.43",
   "description": "bpmn2.0 流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
@@ -24,7 +24,8 @@
     "@dpark/logfv-web-vue": "^1.0.18",
     "@dpark/s2-utils": "^1.0.26",
     "@dpark/vue-bpmn": "^0.3.3",
-    "@dpark/vue-bpmn-controls": "^1.0.24",
+    "@dpark/vue-bpmn-controls": "^1.0.27",
+    "ant-design-vue": "^1.6.3",
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
     "bpmn-theme-blue": "^1.0.7",
