--- a/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
+++ b/sipsd-flowable-editor/src/packages/bpmn-theme-blue/package.json
@@ -23,6 +23,7 @@
     "tiny-svg": "^2.2.2"
   },
   "devDependencies": {
+    "postcss": "^8.2.9",
     "rollup": "^2.43.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^3.1.0",
