--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dpark/vue-bpmn-viewer",
-  "version": "1.0.50",
+  "version": "1.0.51",
   "description": "bpmn2.0 流程图预览组件",
   "main": "dist/index.js",
   "scripts": {
@@ -20,17 +20,19 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@dpark/bpmn-theme-blue": "^1.0.16",
     "@dpark/logfv-web-vue": "^1.0.20",
     "@dpark/s2-utils": "^1.0.27",
     "@dpark/vue-bpmn": "^0.3.3",
+    "@dpark/vue-bpmn-controls": "^1.0.28",
     "ant-design-vue": "^1.6.3",
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
     "bpmn-theme-blue": "^1.0.7",
+    "pretty-ms": "^7.0.1",
     "tiny-svg": "^2.2.2",
     "url-join": "^4.0.1",
-    "vue": "^2.6.11",
-    "pretty-ms": "^7.0.1"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "postcss": "^8.2.9",
