【提交内容】1.增强接口根据用户查询全部任务-get-all-tasks 【提交人】 高强

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -49,9 +49,10 @@ security :
     basic :
         enabled:false
 #License相关配置
-license:
-    subject: license_demo
-    publicAlias: publicCert
-    storePass: public_passwordQAZ2wsx3edc
-    licensePath: /Users/mac/Documents/Apache/license_demo/license.lic
-    public-keys-store-path: /Users/mac/Documents/Apache/license_demo/publicCerts.keystore
+#license:
+#    subject: dpark_license
+#    publicAlias: publicCert
+#    storePass: public_passwordQAZ2wsx3edc
+#    licensePath: /Users/mac/Documents/Apache/license_demo/license.lic
+#    public-keys-store-path: /Users/mac/Documents/Apache/license_demo/publicCerts.keystore
+#    app-id: 123
