--- a/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>sipsdx-common-core</artifactId>
 			<version>2.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.sipsd</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
