--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -22,13 +22,12 @@
   "dependencies": {
     "@dpark/logfv-web-vue": "^1.0.23",
     "@dpark/s2-utils": "^1.0.38",
-    "ant-design-vue": "^1.6.3",
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
-    "bpmn-theme-blue": "^1.0.7",
+    "element-ui": "^2.15.6",
+    "moment": "^2.29.1",
     "pretty-ms": "^7.0.1",
     "tiny-svg": "^2.2.2",
-    "moment": "^2.29.1",
     "url-join": "^4.0.1",
     "vue": "^2.6.11"
   },
