--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -20,6 +20,7 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "element-ui": "^2.15.6",
+    "pretty-ms": "^7.0.1",
     "tiny-svg": "^2.2.2",
     "url-join": "^4.0.1",
     "vue": "^2.6.11",
