--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -48,6 +48,9 @@ info:
 security : 
     basic :
         enabled:false
+sipsd:
+    flowable:
+        calendar: true
 #License相关配置
 #license:
 #    subject: dpark_license
