--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -17,6 +17,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@dpark/logfv-web-vue": "^1.0.24",
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "element-ui": "^2.15.6",
