--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "postcss": "^8.2.9",
+    "postcss-url": "^10.1.3",
     "rollup": "^2.44.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^4.0.0",
