--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -53,6 +53,13 @@
 <!--			<version>1.0.0</version>-->
 <!--		</dependency>-->
 
+		<!--spring cloud admin -->
+<!--		<dependency>-->
+<!--			<groupId>de.codecentric</groupId>-->
+<!--			<artifactId>spring-boot-admin-starter-client</artifactId>-->
+<!--			<version>2.1.6</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<dependencyManagement>
