--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application.yml
@@ -19,17 +19,17 @@ flowable:
       authentication-mode: verify-privilege
   xml:
     encoding: UTF-8
-#management:
-#  endpoint:
-#    health:
-#      roles: access-admin
-#      show-details: when_authorized
-#  endpoints:
-#    jmx:
-#      unique-names: true
-#    web:
-#      exposure:
-#        include: '*'
+management:
+  endpoint:
+    health:
+      roles: access-admin
+      show-details: when_authorized
+  endpoints:
+    jmx:
+      unique-names: true
+    web:
+      exposure:
+        include: '*'
 
 mybatis-plus:
   #config-location: classpath:/META-INF/mybatis-config.xml
@@ -84,4 +84,4 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
   profiles:
-    active: dev,admin
+    active: dev
