--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -23,6 +23,8 @@
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
     "diagram-js": "^7.8.1",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.9.0",
     "min-dash": "^3.8.0",
     "moment": "^2.29.1",
     "pretty-ms": "^7.0.1",
