--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -22,6 +22,8 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "bpmn-js": "^8.2.2",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.9.0",
     "element-ui": "^2.15.6",
     "pretty-ms": "^7.0.1",
     "tiny-svg": "^2.2.2",
