--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/package.json
@@ -23,11 +23,10 @@
     "axios": "^0.18.0",
     "bpmn-js": "^8.2.2",
     "diagram-js": "^7.8.1",
-    "downloadjs": "^1.4.7",
-    "html-to-image": "^1.9.0",
     "min-dash": "^3.8.0",
     "moment": "^2.29.1",
     "pretty-ms": "^7.0.1",
+    "save-svg-as-png": "^1.4.17",
     "tiny-svg": "^2.2.2",
     "url-join": "^4.0.1",
     "vue": "^2.6.11"
