--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                     echo "获取包的本地版本和线上版本"
                     versionLocal = sh(script: "node -p 'let path=\"$rootPath\";require(path+\"/package.json\").version'", returnStdout: true).trim()
                     packageName = sh(script: "node -p 'let path=\"$rootPath\";require(path+\"/package.json\").name'", returnStdout: true).trim()
-                    def versionOnline =  sh(script: "npm view $packageName version", returnStdout: true).trim()
+                    def versionOnline =  sh(script: "npm view $packageName version --registry='$npm'", returnStdout: true).trim()
                     if ("$versionOnline" == "$versionLocal" && cover){
                         echo "版本相同则撤销线上版本"
                         publish = true
