--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
@@ -1,4 +1,4 @@
-def cover = false //相同版本是否覆盖
+def cover = true //相同版本是否覆盖
 def rootPath = "./sipsd-flowable-editor/src/packages/vue-bpmn-viewer"
 def tgzName = "vue-bpmn-viewer"
 def gitUrl = "http://192.168.126.25/git/cbb/flowable_v4.git"
