--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -26,7 +26,7 @@ spring:
 #            username: root
 #            password: Admin@1234
             # FIXME 8.x需设置serverTimezone   推荐使用mysql5.7版本-注：请设置mysql表名大小写不敏感
-            url: jdbc:mysql://192.168.126.47:3306/flowable_test?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+            url: jdbc:mysql://127.0.0.1:3306/flowable_test?characterEncoding=UTF-8&useUnicode=true&useSSL=false
             username: root
             password: 123@abcd
             # FIXME 8.x选择 com.mysql.cj.jdbc.Driver   推荐使用mysql5.7版本
@@ -51,6 +51,8 @@ security :
 sipsd:
     flowable:
         calendar: true
+        approveState: true
+        approveKey: approve
 #License相关配置
 #license:
 #    subject: dpark_license
