【提交内容】优化自然时和工作时设置 【提交人】 高强

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -51,7 +51,7 @@ security :
 sipsd:
     flowable:
         calendar: true
-        approveState: true
+        approveState: false
         approveKey: approve
 #License相关配置
 #license:
