【提交内容】优化自然时和工作时设置 【提交人】 高强

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -50,7 +50,7 @@ security :
         enabled:false
 sipsd:
     flowable:
-        calendar: true
+        calendar: false
         approveState: false
         approveKey: approve
 #License相关配置
