--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
@@ -8,7 +8,7 @@ def npm = "http://192.168.126.25/npm"
 def robot = "flowable_publish"
 def versionLocal
 def packageName
-def publish = true
+def publish = false
 pipeline {
     agent any
     stages {
