--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
@@ -5,7 +5,10 @@ def gitUrl = "http://192.168.126.25/git/cbb/flowable_v4.git"
 def branch = "master"
 def credentialsId = "c078ac92-89dd-4842-8292-5e348e68db08"
 def npm = "http://192.168.126.25/npm"
-def robot = "flowable_publish"
+def robot = "test"
+def issuesUrl= 'http://issues.dpark.com.cn/git/issues/flowable_v4/-/issues'
+def releasesUrl= 'http://58.210.9.133/iplatform/npm/-/web/detail/@dpark/vue-bpmn-viewer'
+def docUrl= 'http://58.210.9.133/iplatform/geekdoc/docs/wow/wow-1df4mgf24hnuh'
 def versionLocal
 def packageName
 def notice = false
@@ -61,7 +64,7 @@ pipeline {
                     dingtalk(robot: "$robot",
                                 type: 'ACTION_CARD',
                                 at: [],
-                                atAll: false,
+                                atAll: true,
                                 title: "",
                                 text: [
                                 "<font color=#0089ff >${packageName}组件发版</font>",
@@ -72,6 +75,9 @@ pipeline {
                                 "* 组件：${packageName}",
                                 "* 版本：${versionLocal}",
                                 "* 状态：<font color=#00EE00 >发版成功</font>",
+                                "* 查看版本：[点击查看](${releasesUrl})",
+                                "* 查看issues：[点击查看](${issuesUrl})",
+                                "* 在线文档：[点击查看](${docUrl})",
                                 "* 持续时间：${currentBuild.durationString}".split("and counting")[0],
                                 "* 执行人：${currentBuild.buildCauses.shortDescription}",
                                 ],
