--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -27,7 +27,7 @@
 		<java.version>1.8</java.version>
 		<!-- 	FIXME 8.x选择8.0.11版本  推荐使用mysql5.7版本 -->
 		<mysql.version>5.1.39</mysql.version>
-		<druid.springboot.version>1.1.10</druid.springboot.version>
+<!--		<druid.springboot.version>1.1.10</druid.springboot.version>-->
 		<!-- <mybatis-spring-boot>1.3.1</mybatis-spring-boot> -->
 		<flowable.version>6.4.2</flowable.version>
 <!-- 		<flowable.version>6.6.0</flowable.version> -->
