--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -6,38 +6,13 @@ log:
     root: DEBUG
 
 spring:
-    endpoints:
-        sensitive: false     
     datasource:
-        druid:
-            initial-size: 10
-            max-active: 40
-            max-pool-prepared-statement-per-connection-size: 20
-            max-wait: 60000
-            min-evictable-idle-time-millis: 300000
-            min-idle: 5
-            pool-prepared-statements: true
-            test-on-borrow: false
-            test-on-return: false
-            test-while-idle: true
-            time-between-eviction-runs-millis: 60000
-            #url:  jdbc:mysql://115.28.187.78:3306/sipsd-simple?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-#            url:  jdbc:mysql://115.28.187.78:3306/flowable?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-#            username: root
-#            password: Admin@1234
-            # FIXME 8.x需设置serverTimezone   推荐使用mysql5.7版本-注：请设置mysql表名大小写不敏感
-            url: jdbc:mysql://127.0.0.1:3306/flowable_test?characterEncoding=UTF-8&useUnicode=true&useSSL=false
-            username: root
-            password: 123@abcd
-            # FIXME 8.x选择 com.mysql.cj.jdbc.Driver   推荐使用mysql5.7版本
-            driver-class-name: com.mysql.jdbc.Driver
-            validation-query: SELECT 1
-            show-sql: true
-            filter:
-                commons-log:
-                    data-source-log-enabled: true
-                    statement-log-enabled: true
-                    statement-executable-sql-log-enable: true
+        hikari:
+            maximum-pool-size: 20
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://127.0.0.1:3306/flowable_test?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+        username: root
+        password: 123@abcd
 
 info: 
     app:  
