--- a/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>validation-api</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
