【提交人】 优化依赖 【提交内容】分布式事务

--- a/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
@@ -46,6 +46,10 @@
 			<artifactId>mybatis-plus-extension</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.sipsd</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>1.0.0</version>
