--- a/sipsd-flowable-parent/sipsd-flowable-core/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-core/pom.xml
@@ -130,6 +130,10 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.version}</version>
