--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -10,11 +10,10 @@
 	<version>4.1.0-SNAPSHOT</version>
 
 	<parent>
-		<groupId>cn.com.dpark.bzh</groupId>
-		<artifactId>dpark-parent</artifactId>
-		<version>1.0.0.RELEASE</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.6.RELEASE</version>
 	</parent>
-
 
 	<modules>
 		<module>sipsd-flowable-api</module>
