--- a/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
@@ -46,20 +46,15 @@
 			<artifactId>mybatis-plus-extension</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<groupId>com.sipsd</groupId>
+			<artifactId>sipsdx-common-core</artifactId>
+			<version>2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sipsd</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-
 	</dependencies>
 
 </project>
