--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -10,9 +10,9 @@
 	<version>4.1.0-SNAPSHOT</version>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.6.RELEASE</version>
+		<groupId>cn.com.dpark.bzh</groupId>
+		<artifactId>dpark-parent</artifactId>
+		<version>1.0.0.RELEASE</version>
 	</parent>
 
 	<modules>
@@ -27,11 +27,9 @@
 		<java.version>1.8</java.version>
 		<!-- 	FIXME 8.x选择8.0.11版本  推荐使用mysql5.7版本 -->
 		<mysql.version>5.1.39</mysql.version>
-		<!-- <mybatis-spring-boot>1.3.1</mybatis-spring-boot> -->
 		<flowable.version>6.4.2</flowable.version>
-<!-- 		<flowable.version>6.6.0</flowable.version> -->
+		<sipsd.txlcn.version>1.0.0.RELEASE</sipsd.txlcn.version>
 		<mybatis-plus.version>3.3.1.tmp</mybatis-plus.version>
-		<hutool.version>4.5.16</hutool.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,11 +43,10 @@
 			<artifactId>json-path</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 <!--		<dependency>-->
 <!--			<groupId>com.sipsd</groupId>-->
 <!--			<artifactId>dpark-license-spring-boot-starter</artifactId>-->
-<!--			<version>1.0.0</version>-->
+<!--			<version>1.1.0</version>-->
 <!--		</dependency>-->
 	</dependencies>
 
