--- a/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
@@ -46,9 +46,8 @@
 			<artifactId>mybatis-plus-extension</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.sipsd</groupId>
-			<artifactId>sipsdx-common-core</artifactId>
-			<version>2.0</version>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.sipsd</groupId>
