--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -43,11 +43,11 @@
 			<artifactId>json-path</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.sipsd</groupId>-->
-<!--			<artifactId>dpark-license-spring-boot-starter</artifactId>-->
-<!--			<version>1.1.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.sipsd</groupId>
+			<artifactId>dpark-license-spring-boot-starter</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
