--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -1,4 +1,4 @@
-bath:
+base:
     path: http://127.0.0.1:9001/sipsd-flow-modeler
 log:
     level: INFO
@@ -39,10 +39,10 @@ sipsd:
         approveState: false
         approveKey: approve
 #License相关配置
-#license:
-#    subject: dpark_license
-#    publicAlias: publicCert
-#    storePass: public_passwordQAZ2wsx3edc
-#    licensePath: /Users/mac/Documents/Apache/license_demo/license.lic
-#    public-keys-store-path: /Users/mac/Documents/Apache/license_demo/publicCerts.keystore
+license:
+    #    subject: dpark_license
+    #    publicAlias: publicCert
+    #    storePass: public_passwordQAZ2wsx3edc
+    licensePath: /Users/mac/Documents/Apache/license_demo/license.lic
+    public-keys-store-path: /Users/mac/Documents/Apache/license_demo/publicCerts.keystore
 #    app-id: 123
