【提交内容】优化 【提交人】 高强

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -35,7 +35,7 @@ security :
         enabled:false
 sipsd:
     flowable:
-        calendar: false
+        calendar: true
         approveState: false
         approveKey: approve
 #License相关配置
