--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ log:
 spring:
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://127.0.0.1:3306/flowable_test?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+        url: jdbc:mysql://192.168.126.47:3306/flowable_v8?characterEncoding=UTF-8&useUnicode=true&useSSL=false
         username: root
         password: 123@abcd
         hikari:
