--- a/sipsd-flowable-editor/.npmrc
+++ b/sipsd-flowable-editor/.npmrc
@@ -1,2 +1,2 @@
 registry  = "http://192.168.126.25/npm"
-@dpark:registry="http://58.210.9.133/iplatform/npm/"
+@dpark:registry="http://192.168.126.25/npm"
