--- a/sipsd-flowable-editor/Jenkinsfile
+++ b/sipsd-flowable-editor/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
             stage('项目编译') {
                 steps {
                     script{
-                        sh "cd ${rootPath} && npm install && npm run build"
+                        sh "cd ${rootPath} && yarn install && yarn run build"
                     }
                 }
             }
