--- a/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
+++ b/sipsd-flowable-editor/src/packages/vue-bpmn-viewer/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                 script {
                     versionLocal = sh(script: "node -p 'let path=\"$rootPath\";require(path+\"/package.json\").version'", returnStdout: true).trim()
                     packageName = sh(script: "node -p 'let path=\"$rootPath\";require(path+\"/package.json\").name'", returnStdout: true).trim()
-                    sh "cd $rootPath && yarn install && npm run build"
+                    sh "cd $rootPath && yarn install && yarn run build"
                 }
             }
         }
