--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ base:
     path: http://127.0.0.1:9001/sipsd-flow-modeler
 log:
     level: INFO
-    path: classpath:applogs\flow
+#    path: classpath:applogs\flow
     root: DEBUG
 
 spring:
