--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@dpark/logfv-web-vue": "^1.0.26",
-    "@dpark/s2-utils": "^1.0.43",
-    "@dpark/vue-bpmn-viewer": "^1.0.77",
+    "@dpark/s2-utils": "^1.0.44",
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "bpmn-js": "^8.2.2",
     "downloadjs": "^1.4.7",
     "element-ui": "^2.15.6",
     "html-to-image": "^1.9.0",
+    "moment": "^2.29.4",
     "pretty-ms": "^7.0.1",
     "save-svg-as-png": "^1.4.17",
     "tiny-svg": "^2.2.2",
