--- a/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-api/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>com.sipsd</groupId>
 		<artifactId>sipsd-flowable-parent</artifactId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>4.3.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>sipsd-flowable-api</artifactId>
-	<version>4.1.0-SNAPSHOT</version>
+	<version>4.3.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
