--- a/sipsd-flowable-parent/sipsd-flowable-core/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-core/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>com.sipsd</groupId>
 		<artifactId>sipsd-flowable-parent</artifactId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>4.3.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>sipsd-flowable-core</artifactId>
-	<version>4.1.0-SNAPSHOT</version>
+	<version>4.3.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- <start-class>com.sipsd.flow.main.FlowApplication</start-class> -->
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>com.sipsd</groupId>
 			<artifactId>sipsd-flowable-api</artifactId>
-			<version>4.1.0-SNAPSHOT</version>
+			<version>4.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flowable</groupId>
