--- a/sipsd-flowable-parent/sipsd-flowable-manager/pom.xml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.sipsd</groupId>
 		<artifactId>sipsd-flowable-parent</artifactId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>4.3.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>com.sipsd</groupId>
 			<artifactId>sipsd-flowable-core</artifactId>
-			<version>4.1.0-SNAPSHOT</version>
+			<version>4.3.0</version>
 		</dependency>
 		<!-- sqlserver -->
 		<dependency>
