【提交人】高强 【提交内容】注释掉暂时有bug的接口，项目中暂未用到

--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/application-dev.yml
@@ -5,6 +5,11 @@ log:
 #    path: classpath:applogs\flow
     root: DEBUG
 
+logging:
+    level:
+        org.flowable.engine.impl.persistence.entity.*: debug
+        org.flowable.task.service.impl.persistence.entity.*: debug
+
 spring:
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
