--- a/sipsd-flowable-parent/pom.xml
+++ b/sipsd-flowable-parent/pom.xml
@@ -46,6 +46,13 @@
 		<dependency>
 			<groupId>com.sipsd</groupId>
 			<artifactId>dpark-license-spring-boot-starter</artifactId>
+			<!-- 去掉springboot自带的日志 -->
+<!--			<exclusions>-->
+<!--				<exclusion>-->
+<!--					<groupId>org.springframework.boot</groupId>-->
+<!--					<artifactId>spring-boot-starter-logging</artifactId>-->
+<!--				</exclusion>-->
+<!--			</exclusions>-->
 			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
